## Package Config ##
[metadata]
name = benzaitensensord
version = 0.0
url = https://github.com/HanaPoulpe/SensorAPI
author = Hana Burtin
author_email = hana@hanaburtin.net
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Topic :: Utilities
    Typing :: Typed
    Topic :: Internet :: WWW/HTTP :: WSGI :: Server
    Topic :: Scientific/Engineering
license = GPLv3
license_files = LICENSE
description = Rest API for sensor status dump.
long_description = file: README.md
keywords =
    rest api
    flask
    sensor

[options]
zip_safe = False
include_packages_data = True
packages = find:
package_dir =
    =src
install_requires =
    flask==2.0.2
tests_require =
    unittest
    coverage==6.1.2
    flake8==4.0.1
    mypy
    isort
    doc8
    docstr-coverage
    Flask-Testing==0.8.1
python_requires = >=3.10

[options.package_data]
* = *.txt, *.rst, *.md, *.conf, .yaml, *.json, *.sql

[options.entry_points]
console_scripts =
    benzaitensensord = benzaitensensor.benzaitensensord:main

[options.packages.find]
where=src

## Tests Config ##

## http://coverage.readthedocs.io/en/latest/config.html
[coverage:run]
branch = True
include =
    src/*

[coverage:paths]
source =
    src

[coverage:report]
exclude_lines =
    pragma: no cover
    if False
    \.\.\.
fail_under = 95
show_missing = True
# skip_empty = True

## http://mypy.readthedocs.io/en/latest/config_file.html
[mypy]
python_version = 3.10

[flake8]
max-line-length = 100
doctests = True
exclude =
    .git
    .eggs
    __pycache__
    tests/
    docs/
    build/
    dist/
    .tox
    *.egg
max-complexity =  10
statistics = True
ignore =
    D400
    D401
    D105
    DAR101
    DAR201
per-file-ignores =
    **/__init__.py: F401